fixing the navbar, I accidentally hid it, now it is visible under the header

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,700&display=swap');
+
 /* Reset some default browser styles */
 body,
 h1,
@@ -15,14 +16,20 @@ a {
 body {
     background-color: #f4e1d2;
     font-family: 'Josefin Sans', Arial, sans-serif;
+    margin-top: 70px;
 }
 
 /* Style the header */
 header {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: #5e4630;
     color: #fff;
     text-align: center;
     padding: 20px 0;
+    z-index: 1000;
 }
 
 header h1 {
@@ -36,6 +43,14 @@ header p {
 }
 
 /* Style the navigation menu */
+nav {
+    position: relative;
+    width: 100%;
+    background-color: #5e4630;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1001;
+}
+
 nav ul {
     list-style: none;
     text-align: center;
@@ -128,8 +143,9 @@ nav a {
     flex-direction: column;
     align-items: center;
     overflow-y: auto;
-    max-height: 500px;
+    max-height: 100%;
     padding: 20px;
+    margin-top: 4.5rem;
 }
 
 .blog-post {
